--- a/template-piu/Dockerfile
+++ b/template-piu/Dockerfile
@@ -1,8 +1,4 @@
-FROM nginx
-
 # Copy static HTML pages (when building a new image)
-COPY html /usr/share/nginx/html
+FROM php:7.2-apache
 
-# Start command
-COPY docker_run.sh /docker_run.sh
-CMD sh /docker_run.sh
+COPY html /var/www/html/
