--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "require": {
         "php": ">=7.0.0",
         "fideloper/proxy": "~4.0",
-        "laravel/framework": "5.8.*"
+        "laravel/framework": "5.8.*",
+      "ext-http": "*"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
