--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": ">=7.0.0",
         "fideloper/proxy": "~4.0",
         "laravel/framework": "5.8.*",
-      "ext-http": "*"
+      "ext-http": "*",
+      "ext-json": "*"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
