--- a/.env_production
+++ b/.env_production
@@ -1,8 +1,8 @@
-APP_NAME=Thingy
+APP_NAME=KeyShare
 APP_KEY=base64:xWdLc4KY3iJKHCupluHuu1nDwvprk4OAqnsc6RRrGsA=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_LOG_LEVEL=debug
-APP_URL=http://lbaw-prod.fe.up.pt:80/demo/
+APP_URL=http://lbaw2043.lbaw-prod.fe.up.pt/
 
 DB_CONNECTION=pgsql
 DB_HOST=dbm.fe.up.pt
