Start to receive the emails

--- a/.env
+++ b/.env
@@ -18,3 +18,10 @@ SESSION_DRIVER=file
 SESSION_LIFETIME=120
 QUEUE_DRIVER=sync
 
+MAIL_DRIVER=smtp
+MAIL_HOST=smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=e896679849b45e
+MAIL_PASSWORD=f4011a7fa9f18c
+MAIL_FROM_ADDRESS=from@example.com
+MAIL_FROM_NAME=Example
