--- a/.env
+++ b/.env
@@ -19,9 +19,9 @@ SESSION_LIFETIME=120
 QUEUE_DRIVER=sync
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=e896679849b45e
-MAIL_PASSWORD=f4011a7fa9f18c
-MAIL_FROM_ADDRESS=from@example.com
-MAIL_FROM_NAME=Example
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=lbawg43feup2020@gmail.com
+MAIL_PASSWORD=LBAW2020
+MAIL_FROM_ADDRESS=support@keyshare.com
+MAIL_ENCRYPTION=tls
