--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,10 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
+        "ext-json": "*",
         "fideloper/proxy": "~4.0",
-        "laravel/framework": "5.8.*",
-      "ext-json": "*"
+        "intervention/image": "^2.5",
+        "laravel/framework": "5.8.*"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
