--- a/.env
+++ b/.env
@@ -18,3 +18,10 @@ SESSION_DRIVER=file
 SESSION_LIFETIME=120
 QUEUE_DRIVER=sync
 
+MAIL_DRIVER=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=lbawg43feup2020@gmail.com
+MAIL_PASSWORD=LBAW2020
+MAIL_FROM_ADDRESS=support@keyshare.com
+MAIL_ENCRYPTION=tls
