--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "ext-json": "*",
         "fideloper/proxy": "~4.0",
         "intervention/image": "^2.5",
-        "laravel/framework": "5.8.*"
+        "laravel/framework": "5.8.*",
+        "laravel/socialite": "^4.3"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
