--- a/.env_production
+++ b/.env_production
@@ -1,6 +1,6 @@
 APP_NAME=Keyshare                  # change this
 APP_KEY=base64:xWdLc4KY3iJKHCupluHuu1nDwvprk4OAqnsc6RRrGsA=
-APP_DEBUG=true                             # change this later
+APP_DEBUG=false                             # change this later
 APP_LOG_LEVEL=debug
 APP_URL=http://lbaw2043.lbaw-prod.fe.up.pt/  # change this
 
