--- a/.env
+++ b/.env
@@ -26,6 +26,6 @@ MAIL_PASSWORD=LBAW2020
 MAIL_FROM_ADDRESS=support@keyshare.com
 MAIL_ENCRYPTION=tls
 
-GOOGLE_CLIENT_ID = 192341084933-2k29bnbtpf95pifvbk3jomtt1sftbsa3.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET = qQc2V-xpSCBAFE_nA0OFFpmZ
-GOOGLE_REDIRECT = /login/google/callback
+GOOGLE_CLIENT_ID=192341084933-2k29bnbtpf95pifvbk3jomtt1sftbsa3.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=qQc2V-xpSCBAFE_nA0OFFpmZ
+GOOGLE_REDIRECT=/login/google/callback
